# mirr

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
docs/: CMakeLists.txt  docs.md
example/: CMakeLists.txt  example.cpp
include/: any.h  argument_container.h  basic_hash.h  data.h  data_container.h  function.h  function_container.h  reflection.h  registry.h  type.h  type_container.h  type_data.h  type_factory.h  type_flags.h  type_hash.h  type_traits.h  util.h
include/mirr/: any.h  basic_hash.h  constructor.h  data.h  function.h  initializer.h  mirr.h  registry.h  type.h  type.inl  type_data.h  type_factory.h  type_flags.h  type_hash.h  type_traits.h  util.h
include/mirr/iterators/: argument_container.h  constructor_container.h  ctor_argument_container.h  data_container.h  function_container.h  type_container.h
src/: CMakeLists.txt  any.cpp  argument_container.cpp  basic_hash.cpp  constructor.cpp  data.cpp  data_container.cpp  function.cpp  function_container.cpp  mirr.cpp  reflection.cpp  registry.cpp  type.cpp  type_container.cpp  type_data.cpp  type_factory.cpp
src/iterators/: argument_container.cpp  constructor_container.cpp  ctor_argument_container.cpp  data_container.cpp  function_container.cpp  type_container.cpp
tests/: CMakeLists.txt  test.cpp  testlib.cpp
